--- a/index.html
+++ b/index.html
@@ -14,7 +14,40 @@
         </nav>
     </header>
     <main>
+        <form id="dataForm">
+            <label for="fullName">Name: </label>
+            <input id="fullName" type="text">
+            <br>
+            <label for="department">Department: </label>
 
+            <input type="checkbox" id="administration" name="administration">
+            <label for="administration">Administration</label>
+
+            <input type="checkbox" id="marketing" name="marketing">
+            <label for="marketing">Marketing</label>
+
+            <input type="checkbox" id="development" name="development">
+            <label for="development">Development</label>
+
+            <input type="checkbox" id="finance" name="finance" >
+            <label for="finance">Finance</label>
+            <br>
+            <label for="level">Level: </label>
+
+            <input type="checkbox" id="junior" name="junior">
+            <label for="junior">Junior</label>
+
+            <input type="checkbox" id="midSenior" name="midSenior">
+            <label for="midSenior">Mid-Senior</label>
+
+            <input type="checkbox" id="senior" name="senior">
+            <label for="senior">Senior</label>
+            <br>
+            <label for="Image">Image: </label>
+            <input type="text" id="image">
+            <br>
+            <button id="submit" value="submit">Submit</button>
+        </form>
         <script src="/js/app.js"></script>
     </main>
     <footer>
