--- a/index.html
+++ b/index.html
@@ -15,39 +15,36 @@
     </header>
     <main>
         <form id="dataForm">
+            <fieldset>
             <label for="fullName">Name: </label>
             <input id="fullName" type="text">
             <br>
             <label for="department">Department: </label>
-
-            <input type="checkbox" id="administration" name="administration">
-            <label for="administration">Administration</label>
-
-            <input type="checkbox" id="marketing" name="marketing">
-            <label for="marketing">Marketing</label>
-
-            <input type="checkbox" id="development" name="development">
-            <label for="development">Development</label>
-
-            <input type="checkbox" id="finance" name="finance" >
-            <label for="finance">Finance</label>
+            <select name="department" id="department">
+                <option value="administration">Administration</option>
+                <option value="marketing">Marketing</option>
+                <option value="development">Development</option>
+                <option value="finance">Finance</option>
+            </select>
             <br>
             <label for="level">Level: </label>
-
-            <input type="checkbox" id="junior" name="junior">
-            <label for="junior">Junior</label>
-
-            <input type="checkbox" id="midSenior" name="midSenior">
-            <label for="midSenior">Mid-Senior</label>
-
-            <input type="checkbox" id="senior" name="senior">
-            <label for="senior">Senior</label>
+            <select name="level" id="level">
+                <option value="Junior">Junior</option>
+                <option value="Mid-Senior">Mid-Senior</option>
+                <option value="Senior">Senior</option>
+            </select>
             <br>
-            <label for="Image">Image: </label>
-            <input type="text" id="image">
+            <label for="image">Image: </label>
+            <input id="image" type="text">
             <br>
-            <button id="submit" value="submit">Submit</button>
+            <button id="submit" type="submit">Submit</button>
+
+            </fieldset>
         </form>
+        <div id="mainDiv">
+            
+        </div>
+        <hr>
         <script src="/js/app.js"></script>
     </main>
     <footer>
