--- a/accounting.html
+++ b/accounting.html
@@ -17,10 +17,12 @@
             
         </nav>
     </header>
+    <center>
     <section>
         <table id = "table"> </table>
         
-            </section>
+    </section>
+    </center>
     <footer>
         <nav>
             <h6>copyright @ HR-management<h6>
